# chacha

./: Cargo.toml  README.md  aliases.js  index.html  search-index.js
chacha/: ChaCha.t.html  all.html  enum.Error.html  fn.permute.html  fn.permute_and_add.html  fn.permute_only.html  fn.selftest.html  index.html  permute.v.html  permute_and_add.v.html  sidebar-items.js  struct.ChaCha.html  trait.KeyStream.html  trait.SeekableKeyStream.html
implementors/chacha/: trait.KeyStream.js  trait.SeekableKeyStream.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
keystream/: KeyStream.t.html  SeekableKeyStream.t.html  all.html  enum.Error.html  index.html  trait.KeyStream.html  trait.SeekableKeyStream.html
src/: genericstuff.rs  lib.rs
src/byteorder/: io.rs.html  lib.rs.html  new.rs.html
src/chacha/: lib.rs.html
src/chacha/src/: lib.rs.html
src/keystream/: lib.rs.html
