[package]
name = "chacha"
version = "0.2.0"
authors = ["Peter Reid <peter.d.reid@gmail.com>"]
license = "MIT/Apache-2.0"
description = "ChaCha stream ciphers"
repository = "https://github.com/PeterReid/chacha"
documentation = "http://peterreid.github.io/chacha"

[dependencies]
byteorder = "^1.0"
keystream = "^1.0"

[features]
nightly = []
bench = []
